font fixing on mobile, small adjusment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,6 +118,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: Geist, ui-sans-serif, system-ui, sans-serif; /* font usage */
   }
 }
 html {
